force-app/main/default/objects/Escola__c/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <description>Cidade onde reside a escola.</description>
    <inlineHelpText>Entre com a Cidade.</inlineHelpText>
    <label>Cidade</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>