force-app/main/default/objects/Escola__c/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <description>CNPJ da escola</description>
    <externalId>true</externalId>
    <inlineHelpText>Digite o CNPJ da escola</inlineHelpText>
    <label>CNPJ</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>