force-app/main/default/objects/Escola__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Estado onde reside a escola.</description>
    <inlineHelpText>Escolha um estado.</inlineHelpText>
    <label>Estado</label>
    <length>155</length>
    <type>Text</type>
</CustomField>