force-app/main/default/objects/Escola__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <description>País onde reside a escola.</description>
    <inlineHelpText>Escolha o País.</inlineHelpText>
    <label>País</label>
    <length>155</length>
    <type>Text</type>
</CustomField>