force-app/main/default/objects/Escola__c/fields/RazaoSocial__c.field-meta.xml
<CustomField>
    <fullName>RazaoSocial__c</fullName>
    <label>Razao Social</label>
    <length>155</length>
    <type>Text</type>
</CustomField>