force-app/main/default/objects/Escola__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cidade__c</columns>
    <columns>CNPJ__c</columns>
    <columns>Estado__c</columns>
    <columns>Pais__c</columns>
    <columns>RazaoSocial__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>